--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
         "symfony/templating": "^3.4",
+        "symfony/webpack-encore-bundle": "^1.5",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
